[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
zip = "2.1"
flate2 = "1.0"
indicatif = "0.17"
colored = "2"
which = "6"
dunce = "1"
thiserror = "1"
anyhow = "1"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.35.2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "wincon", "consoleapi"] }
